Added the gov docs limit to the advanced search.

--- a/themes/phoenix/templates/search/advanced/solr.phtml
+++ b/themes/phoenix/templates/search/advanced/solr.phtml
@@ -497,6 +497,7 @@ $formats = array(
 	array('class' => 'cat', 'value' => 'format:"Microform"' , 'text' => 'Microform'),
 	array('class' => 'cat', 'value' => 'format:"Music score"', 'text' => 'Music score'),
 	array('class' => 'cat', 'value' => 'format:"Print"', 'text' => 'Print'),
+	array('class' => 'cat', 'value' => 'format:"U.S. Federal Government Document"', 'text' => 'U.S. Federal Government Document'),
 	array('class' => 'cat', 'value' => 'format:"Video"' , 'text' => 'Video'),
 	array('value' => 'format:"Blu-ray disc"', 'text' => 'Blu-ray disc'),
 	array('value' => 'format:"DVD"', 'text' => 'DVD'),
