Fixed a typo in the renewals code, changed "counsult" to "consult".

--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -11,7 +11,7 @@
     $style = 'margin-bottom:-6px; font-size:15px;'; 
     if ($this->failure) { 
         $msg = 'Some of your items failed to renew!<br/>Please talk with a librarian or '  
-             . '<a href="http://www.lib.uchicago.edu/e/using/borrow/">counsult our '
+             . '<a href="http://www.lib.uchicago.edu/e/using/borrow/">consult our '
              . 'borrowing policies page</a> if you have any questions.';
         echo $this->BootstrapAlert()->makeAlert('danger', $msg, $style);
     }
