Updated links for the new website.

--- a/themes/phoenix/templates/footer.phtml
+++ b/themes/phoenix/templates/footer.phtml
@@ -21,7 +21,7 @@
     <p id="copyright">&copy; 2015 
         <a href="http://www.lib.uchicago.edu/">The University of Chicago Library</a><br/>
         Powered by <a href="http://vufind.org/">VuFind</a> and 
-        <a href="http://www.kuali.org/ole">Kuali OLE</a>
+        <a href="http://www.openlibraryenvironment.org/">OLE</a>
     </p>
     <!--<p><strong><?//=$this->transEsc('Need Help?')?></strong></p>
     <ul>
