--- a/themes/phoenix/templates/header.phtml
+++ b/themes/phoenix/templates/header.phtml
@@ -93,7 +93,7 @@
           </ul>
         </li>-->
       <? endif; ?>
-      <li><a href="http://www.lib.uchicago.edu/e/using/catalog/help.html" title="Help"><?=$this->transEsc("Help")?></a></li>
+      <li><a href="https://www.lib.uchicago.edu/research/help/catalog-help/" title="Help"><?=$this->transEsc("Help")?></a></li>
     </ul>
   </div>
 <? endif; ?>
