--- a/themes/phoenix/templates/search/advanced/layout.phtml
+++ b/themes/phoenix/templates/search/advanced/layout.phtml
@@ -237,7 +237,7 @@
   <div class="col-md-12">
     <div id="about-beta"> 
       <p class="title">
-        <a href="http://www.lib.uchicago.edu/e/using/catalog/about.html" target="_blank" class="external">About the Library Catalog</a>
+        <a href="https://www.lib.uchicago.edu/research/help/catalog-help/about/" target="_blank" class="external">About the Library Catalog</a>
       </p>
     </div><!-- end about-beta-->
   </div><!-- end col-md-12-->
