Added new "alerts" functionality that displays in the header and draws automatically from the library website.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -1320,3 +1320,16 @@ a.tool:hover .arrow-left {
         }
     }
 }
+#alert {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    background:#FFB547;
+    color:@brand-primary-dark;
+    p {
+        display: inline;
+    }
+    a {
+        color:#0F425C;
+    }
+}
