--- a/themes/phoenix/templates/feedback/knowledgetracker.phtml
+++ b/themes/phoenix/templates/feedback/knowledgetracker.phtml
@@ -1,6 +1,6 @@
 <?
     // Set page title
-    $this->headTitle($this->translate('Feedbacik Email'));
+    $this->headTitle($this->translate('Feedback Email'));
     // Get rid of the feedback tab since this uses the same variables
     $this->layout()->feedbacktab = false;
 ?>
