--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -10,7 +10,7 @@
     <? if (empty($this->storagerequests)): ?>
         <p>You do not have any Mansueto requests waiting to be
 submitted. For the status of requested Mansueto items, check <a
-href="/vufind/MyResearch/Holds">Holds and Recalls</a>.</p>
+href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
     <? else: ?>
 	        <form action='/vufind/MyResearch/Storagerequest' method='post' name="mansuetoRequests">
             <p>
