--- a/themes/phoenix/templates/myresearch/menu.phtml
+++ b/themes/phoenix/templates/myresearch/menu.phtml
@@ -16,7 +16,7 @@
       <span class="pull-right"><i class="fa fa-cogs"></i></span>
     </a>
     <a href="<?=$this->url('myresearch-holds')?>" class="list-group-item<?=$this->active == 'holds' ? ' active' : ''?>">
-      <?=$this->transEsc('Holds and Recalls')?>
+      <?=$this->transEsc('Requested Items')?>
       <span class="pull-right"><i class="fa fa-flag"></i></span>
     </a>
     <? if ($this->ils()->checkFunction('StorageRetrievalRequests')): ?>
