Fixed bug that was preventing 561 fields from displaying correctly.

--- a/themes/phoenix/templates/Helpers/MarcFields/541.phtml
+++ b/themes/phoenix/templates/Helpers/MarcFields/541.phtml
@@ -1,5 +1,5 @@
 <!--541.phtml-->
-<? if(($data['indicator1'] == 1)) {
+<? if(($data['indicator1'] != "0")) {
        echo implode(' ', $data['subfieldData']).'<br/>';
    }
         
