--- a/themes/phoenix/templates/search/list-list.phtml
+++ b/themes/phoenix/templates/search/list-list.phtml
@@ -4,7 +4,7 @@
 <? $i = $this->indexStart; foreach ($this->results->getResults() as $current):
   $recordNumber = $this->results->getStartRecord()+$i-$this->indexStart; ?>
   <div id="result<?=$i++ ?>" class="result<?=$current->supportsAjaxStatus()?' ajaxItem':''?>">
-    <div class="checkbox hidden-print">
+    <div class="checkbox hidden-print col-xs-1">
       <? if ($showCheckboxes): ?>
         <label class="hidden-xs hidden-sm">
           <?=$this->record($current)->getCheckbox()?>
