Post merge bugfixes.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -103,7 +103,7 @@ header {
 
 .navbar a,
 header > .navbar li,
-.nav #searchForm a,
+.nav .searchForm a,
 .mini-search a.btn-link {
     color:@light-link;
 }
@@ -222,7 +222,7 @@ body > header > .container > section.visible-lg { //Fullscreen
 .visible-lg > .navbar-left {
     float:none !important;
 }
-div#searchForm {
+div.searchForm {
     padding-right: @grid-gutter-width / 1.5;
     padding-left: @grid-gutter-width / 1.5;
     padding-top: 2px;
@@ -231,7 +231,7 @@ div#searchForm {
         padding-top: 20px;
     }
 }
-div#searchForm p {
+div.searchForm p {
     margin-bottom:0;
 }
 .adv_search_links a {
@@ -460,7 +460,7 @@ body.phoenix #groupPlaceHolder {
 }
 #advSearchForm input.btn-primary {
 }
-#searchForm .form_control {
+.searchForm .form_control {
     width:200px;
 }
 #limit_language,
@@ -501,7 +501,7 @@ search.)
         text-shadow: none;
     }
 }
-#searchForm .form-control,
+.searchForm .form-control,
 #searchForm_type.form-control,
 #alphaBrowseForm .twitter-typeahead,
 #alphaBrowseForm_source.form-control{
