--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "variables";
 @import "vendor/bootstrap-slider/bootstrap-slider";
+@import "myacct";
 
 /*Variables and mixins*/
 .tiny-text-shadow {
