--- a/themes/phoenix/templates/myresearch/holds.phtml
+++ b/themes/phoenix/templates/myresearch/holds.phtml
@@ -22,8 +22,7 @@
               'author' => 'Author',
               'callNumber' => 'Call Number',
               'itemStatus' => 'Item Status',
-              'holdExpirationDate' => 'On Hold Expiration Date',
-              'requestExpirationDate' => 'Request Expiration Date'
+              'holdExpirationDate' => 'On Hold Expiration Date'
             ];
           ?>
           <span class="dropdown">
@@ -34,7 +33,6 @@
               <li><a href="/vufind/MyResearch/Holds?sort=callNumber">Call Number</a></li>
               <li><a href="/vufind/MyResearch/Holds?sort=itemStatus">Item Status</a></li>
               <li><a href="/vufind/MyResearch/Holds?sort=holdExpirationDate">On Hold Expiration Date</a></li>
-              <li><a href="/vufind/MyResearch/Holds?sort=requestExpirationDate">Request Expiration Date</a></li>
             </ul>
           </span>
         </div>
