Changed icon for Mansueto Cart in My Account sidebar.

--- a/themes/phoenix/templates/myresearch/menu.phtml
+++ b/themes/phoenix/templates/myresearch/menu.phtml
@@ -46,7 +46,7 @@
     </a>
   <? endif; ?>
   <a href="<?=$this->url('myresearch-storagerequest')?>" class="list-group-item<?=$this->active == 'storagerequest' ? 'active' : ''?>">
-    <i class="fa fa-fw fa-shopping-basket" aria-hidden="true"></i> Mansueto Cart
+    <i class="fa fa-fw fa-shopping-cart" aria-hidden="true"></i> Mansueto Cart
   </a>
   <a href="https://requests.lib.uchicago.edu/illiad/illiad.dll" class="list-group-item external" target="_blank">
     <i class="fa fa-fw fa-file-text-o" aria-hidden="true"></i> Interlibrary Loan
