--- a/themes/phoenix/templates/myresearch/holds.phtml
+++ b/themes/phoenix/templates/myresearch/holds.phtml
@@ -1,13 +1,13 @@
 <?
     // Set up page title:
-    $this->headTitle($this->translate('My Holds'));
+    $this->headTitle($this->translate('Requested Items'));
 
     // Set up breadcrumbs:
     $this->layout()->breadcrumbs = '<li><a href="' . $this->url('myresearch-home') . '">' . $this->transEsc('Your Account') . '</a></li> <li class="active">' . $this->transEsc('My Holds') . '</li>';
 ?>
 <div class="row">
   <div class="<?=$this->layoutClass('mainbody')?>">
-    <h2><?=$this->transEsc('Your Holds and Recalls') ?></h2>
+    <h2><?=$this->transEsc('Requested Items') ?></h2>
 
     <?=$this->flashmessages()?>
 
