In user generated lists, call number and location are now on separate lines.

--- a/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
+++ b/themes/phoenix/templates/RecordDriver/SolrDefault/list-entry.phtml
@@ -120,8 +120,8 @@
               <? if ($this->driver->supportsAjaxStatus()): ?>
                 <strong class="hideIfDetailed"><?=$this->transEsc('Call Number')?>:</strong>
                 <span class="callnumber ajax-availability hidden">
-                  <?=$this->transEsc('Loading')?>...<br/>
-                </span>
+                  <?=$this->transEsc('Loading')?>...
+                </span><br/>
                 <strong><?=$this->transEsc('Located')?>:</strong>
                 <span class="location ajax-availability hidden">
                   <?=$this->transEsc('Loading')?>...
