--- a/themes/phoenix/templates/layout/layout.phtml
+++ b/themes/phoenix/templates/layout/layout.phtml
@@ -29,11 +29,29 @@
         // Add translation strings
         $this->jsTranslations()->addStrings(
           [
+            'add_tag_success' => 'add_tag_success',
             'bulk_email_success' => 'bulk_email_success',
+            'bulk_noitems_advice' => 'bulk_noitems_advice',
             'bulk_save_success' => 'bulk_save_success',
             'close' => 'close',
             'loading' => 'Loading',
+            'more' => 'more',
+            'number_thousands_separator' => [
+                'number_thousands_separator', null, ','
+            ],
             'sms_success' => 'sms_success'
+          ]
+        );
+        // Add libphonenumber.js strings
+        $this->jsTranslations()->addStrings(
+          [
+            "Phone number invalid" => 'libphonenumber_invalid',
+            "Invalid country calling code" => 'libphonenumber_invalidcountry',
+            "Invalid region code" => 'libphonenumber_invalidregion',
+            "The string supplied did not seem to be a phone number" => 'libphonenumber_notanumber',
+            "The string supplied is too long to be a phone number" => 'libphonenumber_toolong',
+            "The string supplied is too short to be a phone number" => 'libphonenumber_tooshort',
+            "Phone number too short after IDD" => 'libphonenumber_tooshortidd'
           ]
         );
         // Deal with cart stuff:
@@ -49,17 +67,16 @@
           }
           $this->jsTranslations()->addStrings(
             [
-              'bulk_noitems_advice' => 'bulk_noitems_advice',
+              'addBookBag' => 'Add to Book Bag',
+              'bookbagFull' => 'bookbag_full_msg',
+              'bookbagMax' => $cart->getMaxSize(),
+              'bookbagStatusFull' => 'bookbag_full',
               'confirmDelete' => 'confirm_delete',
               'confirmEmpty' => 'bookbag_confirm_empty',
-              'viewBookBag' => 'View Book Bag',
-              'addBookBag' => 'Add to Book Bag',
-              'removeBookBag' => 'Remove from Book Bag',
               'itemsAddBag' => 'items_added_to_bookbag',
               'itemsInBag' => 'items_already_in_bookbag',
-              'bookbagMax' => $cart->getMaxSize(),
-              'bookbagFull' => 'bookbag_full_msg',
-              'bookbagStatusFull' => 'bookbag_full',
+              'removeBookBag' => 'Remove from Book Bag',
+              'viewBookBag' => 'View Book Bag'
             ]
           );
         }
