--- a/themes/phoenix/templates/myresearch/menu.phtml
+++ b/themes/phoenix/templates/myresearch/menu.phtml
@@ -61,10 +61,10 @@
 <h4>Course Reserves</h4>
 <div class="list-group">
   <a href="https://chalk.uchicago.edu/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_1_1" class="list-group-item external" target="_blank">
-    <i class="fa fa-fw fa-address-card" aria-hidden="true"></i> Chalk
+    <i class="fa fa-fw fa-sticky-note" aria-hidden="true"></i> Chalk
   </a>
   <a href="https://acadtech-res.uchicago.edu/canvas/whichlogin/" class="list-group-item external" target="_blank">
-    <i class="fa fa-fw fa-address-book-o" aria-hidden="true"></i> Canvas
+    <i class="fa fa-fw fa-sticky-note-o" aria-hidden="true"></i> Canvas
   </a>
 </div>
 <? if ($this->auth()->isLoggedIn() && $this->auth()->getManager()->supportsPasswordChange()): ?>
