Increased size of book cover images in my account from small to medium.

--- a/themes/phoenix/templates/myresearch/checkedout.phtml
+++ b/themes/phoenix/templates/myresearch/checkedout.phtml
@@ -67,7 +67,7 @@
             <? endif; ?>
           <? endif; ?>
 
-          <? $cover = $this->record($resource)->getCover('checkedout', 'small'); ?>
+          <? $cover = $this->record($resource)->getCover('checkedout', 'medium'); ?>
           <? if ($cover): ?>
             <div class="col-sm-2 hidden-xs text-center">
             <? /* Display thumbnail if appropriate: */ ?>
